--- a/sitNstaySWIFT/Base.lproj/Main.storyboard
+++ b/sitNstaySWIFT/Base.lproj/Main.storyboard
@@ -30,6 +30,9 @@
                                 <state key="normal" title="Log In">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
+                                <connections>
+                                    <segue destination="1zz-1r-fo2" kind="showDetail" id="1iU-zg-cBA"/>
+                                </connections>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sitNstayText" translatesAutoresizingMaskIntoConstraints="NO" id="5Ot-kr-bw3">
                                 <rect key="frame" x="67" y="72" width="240" height="269"/>
@@ -82,6 +85,35 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="245" y="337"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="ekM-UR-v1r">
+            <objects>
+                <viewController id="1zz-1r-fo2" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="yUN-nn-9S6"/>
+                        <viewControllerLayoutGuide type="bottom" id="xYJ-Vc-1T2"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="2or-kf-yWD">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fWd-8r-ZTl">
+                                <rect key="frame" x="20" y="20" width="65" height="30"/>
+                                <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="18"/>
+                                <state key="normal" title="&lt; Back"/>
+                                <connections>
+                                    <segue destination="BYZ-38-t0r" kind="showDetail" id="U16-yJ-gpN"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xiA-XG-Cs4" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="705.5" y="336.5"/>
         </scene>
     </scenes>
     <resources>
